fixing sidebar spacing, increased map size for improved zoom level

--- a/css/style.css
+++ b/css/style.css
@@ -420,7 +420,7 @@ input[readonly] {
 }
 #homemap {
   width:100%;
-  height:460px;
+  height:515px;
   position:relative;
   bottom:0;
   left:0;
@@ -546,7 +546,7 @@ input[readonly] {
 -------------------------------------*/
 #layers-back {
   position:absolute;
-  right: 122px;
+  right: 114px;
   margin:10px 0 0 -26px;
   padding:4px 8px;
   background:#fff;
@@ -578,7 +578,7 @@ ul.layers {
   right:-123px;
   display:block;
   margin:0;
-  height:458px;
+  height:513px;
   border:1px solid #ddd;
   background:#fff;
   z-index:10;
